--- a/sass/components/_recipe-card.scss
+++ b/sass/components/_recipe-card.scss
@@ -2,8 +2,8 @@
 
 .card {
     width: 100%;
-    max-width: 440px;
-    height: 100%;
+    max-width: 400px;
+    height: 580px;
     border-radius: 10px;
     box-shadow: 1px 1px 10px 1px u.$dark-grey;
 }
@@ -14,7 +14,7 @@
     border-radius: 10px 10px 0px 0px; 
     display: flex;
     align-items: center;
-    background-color: u.$grey;
+    background-color: rgb(246, 246, 246);
     padding: 0 0.5rem;
     gap: 0.5rem;
 
@@ -38,7 +38,8 @@
     height: 380px;
     background-color: red;
     scroll-snap-type: x mandatory;
-    overflow: scroll;
+    overflow-x: scroll;
+    overflow-y: hidden;
     display: flex;
 
     &__img{
@@ -52,8 +53,8 @@
 
 .recipe-info{
     width: 100%;
-    height: 127px;
-    // padding: 0.3rem 0.5rem;
+    height: 150px;
+    padding: 0.3rem 0.5rem;
     display: flex;
     flex-direction: column;
     gap: 0.5rem;
@@ -77,9 +78,14 @@
         width: 100%;
         height: 30px;
         position: absolute;
-        bottom: 0px;
+        bottom: 0rem;
         display: flex;
         justify-content: space-between;
+
+        div {
+                display: flex;
+                align-items: center;
+            }
 
         &__time-price{
             display: flex;
@@ -87,16 +93,32 @@
             width: 60%;
             // background-color: aqua;
 
-            div{
-                display: flex;
-                align-items: center;
-            }
-
-            span#icon{
+            #icon{
                 font-size: 0.9rem;
                 padding: 0 4px 0 0;
             }
-            
+
+            #icon--money{
+                font-size: 0.9rem;
+                padding: 0 4px 0 0;
+                color: u.$green;
+            }
+        }
+
+        &__rating{
+
+            #icon{
+                font-size: 1.2rem;
+                padding: 0 4px 0 0;
+
+                font-variation-settings:
+                        'FILL' 1,
+                        'wght' 400,
+                        'GRAD' 0,
+                        'opsz' 48;
+
+                color: #ffd931;
+            }
         }
     }
 }
