--- a/sass/components/_recipe-card.scss
+++ b/sass/components/_recipe-card.scss
@@ -33,21 +33,16 @@
     }    
 }
 
-.image-track{
+.thumbnail-image{
     width: 100%;
     height: 380px;
-    background-color: red;
-    scroll-snap-type: x mandatory;
-    overflow-x: scroll;
-    overflow-y: hidden;
-    display: flex;
+    background-color: #ffd931;
 
     &__img{
         width: 100%;
         height: 100%;
         object-fit: cover;
         object-position: center;
-        scroll-snap-align: start;
     }
 }
 
