--- a/sass/pages/_recipe.scss
+++ b/sass/pages/_recipe.scss
@@ -44,6 +44,7 @@
         &__img {
             width: 100%;
             height: 100%;
+            flex-shrink: 0;
             object-fit: cover;
             object-position: center;
             scroll-snap-align: start;
